src/test/ui/issues/issue-1XXXX/issue-19244-2.stderr
error[E0609]: no field `nonexistent_field` on type `MyStruct`
  --> $DIR/issue-19244-2.rs:5:27
   |
LL |     let a: [isize; STRUCT.nonexistent_field];
   |                           ^^^^^^^^^^^^^^^^^ unknown field
   |
   = note: available fields are: `field`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0609`.
